# daily-headers

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  LICENSE  LICENSE-ASSETS  README.md  generate_batch.py  generate_daily.py  generate_header.py  generate_monthly_parallel.py  main.py  pyproject.toml  update_assets_readme.py
assets/: 01-01.txt  01-02.txt  01-03.txt  01-04.txt  01-05.txt  01-06.txt  01-07.txt  01-08.txt  01-09.txt  01-10.txt  01-11.txt  01-12.txt  01-13.txt  01-14.txt  01-15.txt  01-16.txt  01-17.txt  01-18.txt  01-19.txt  01-20.txt  01-21.txt  01-22.txt  01-23.txt  01-24.txt  01-25.txt  01-26.txt  01-27.txt  01-28.txt  01-29.txt  01-30.txt  01-31.txt  01.md  02-01.txt  02-02.txt  02-03.txt  02-04.txt  02-05.txt  02-06.txt  02-07.txt  02-08.txt  (+339 more)
daily_headers.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
